BUGFIX: Fix OverviewItemDropdown for Safari

--- a/app/.env.test
+++ b/app/.env.test
@@ -18,7 +18,7 @@
 ###> HINT: The following variables are overwritten for the test environment <###
 
 # make sure this db exist for local testing (see deployment/mysql/docker-entrypoint-initdb.d/create-test-db.sql)
-DATABASE_URL="mysql://degree:${MYSQL_PASSWORD}@db/degree_test}"
+DATABASE_URL="mysql://degree:${MYSQL_PASSWORD}@db/degree_test"
 
 TRUSTED_HOSTS='^127.\d+.\d+.\d+|172.\d+.\d+.\d+|localhost|degree|degree40.tu-dortmund.de$'
 
