--- a/app/.env
+++ b/app/.env
@@ -15,6 +15,8 @@
 
 ###> HINT: Lot's of variables are provided by host system via Docker Compose! <###
 
+DATABASE_URL='%env(DATABASE_URL_FROM_COMPOSE)%'
+
 ###> symfony/framework-bundle ###
 TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 ###< symfony/framework-bundle ###
